# claudelearnspokemon

./: .coverage  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  =3.7.0  =4.3.0  BATCH_INPUT_PERFORMANCE_OPTIMIZATION.md  CLAUDE.md  COMPLEXITY_ANALYSIS_EMPIRICAL_VALIDATION.md  COVERAGE_FAILURE_PATTERNS_MEMORY.md  COVERAGE_TRACKING_RESTORATION_SUCCESS.md  CRITICAL_QUALITY_ASSURANCE_GAP_ANALYSIS.md  DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_STATUS_PR_234.md  GUARDIAN_SECURITY_VALIDATION_CHECKLIST.md  IMMEDIATE_FOLLOW_UP_ISSUES.md  ISSUE148_ACT_IMPLEMENTATION_RESULTS.json  ISSUE148_REMEMBER_IMPLEMENTATION_SYNTHESIS.json  ISSUE148_REMEMBER_PHASE_COMPLETION_REPORT.json  ISSUE148_REMEMBER_PHASE_FINAL_OUTPUT.json  ISSUE148_REMEMBER_PHASE_INSIGHTS.json  ISSUE_151_REQUIREMENTS_VALIDATION.md  ISSUE_239_COMPLETION_STATUS.md  ISSUE_89_IMPLEMENTATION_SUMMARY.md  ISSUE_MANAGEMENT_TASK_189.md  MESSAGE_ROUTING_IMPLEMENTATION_LEARNINGS.md  MONITORING_SETUP.md  OPERATIONS_GUIDE.md  PERFORMANCE_BASELINE.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  POKEMON_GYM_ADAPTER_COMPLETION_REPORT.md  POKEMON_GYM_ADAPTER_INTERFACE_SPEC.md  PR232_ACT_IMPLEMENTATION_FINAL_REPORT.json  PR232_ACT_IMPLEMENTATION_RESULTS.json  PR232_ACT_IMPLEMENTATION_RESULTS_FINAL.json  PR232_ACT_RESULTS.json  PR232_EMPIRICAL_VALIDATION_REPORT.md  PR232_HONEST_PERFORMANCE_REPORT.md  PR232_HONEST_PERFORMANCE_UPDATE.md  (+90 more)
.claude/: settings.local.json
.github/workflows/: README.md  ci.yml  coverage-validation.yml  docker-integration.yml  integration-tests.yml  test.yml
checkpoints/: metadata.db
deployment/: circuit_breaker_monitor.py  deploy.sh  health_monitor.py
deployment/logs/: deploy.log.20250829_220201  deploy.log.20250829_220537
deployment/phase1-shadow/: Dockerfile.routing  Dockerfile.tester  performance_tester.py  prometheus-shadow.yml
deployment/phase1-shadow/grafana/dashboards/: dashboards.yml
deployment/phase1-shadow/grafana/dashboards/routing/: routing-engine-performance.json
deployment/phase1-shadow/grafana/dashboards/shadow/: shadow-comparison.json
deployment/phase1-shadow/grafana/datasources/: prometheus.yml
deployment/phase2-partial/: docker-compose.partial.template.yml  nginx-partial.conf.template  prometheus-partial.yml
deployment/phase3-full/: docker-compose.full.yml
deployment/results/: shadow_deployment_simulation.md
docker/pokemon-gym/: Dockerfile  README.md  build.sh  mock_service.py
docs/: QUALITY_PROCESS_ENHANCEMENT_GUIDE.md  api_inconsistencies_analysis.md  architecture_overview.md  monitoring_system.md  performance_tuning.md  pokemon_gym_adapter.md  quality_validation_report.md  refactoring_testing_strategy.md  solid_refactoring_success_analysis.md  solid_refactoring_template.md  troubleshooting.md
examples/: pokemon_gym_usage.py  redis_cache_usage.py
monitoring/: alert_rules.yml  grafana_dashboard.json  prometheus_config.yml
scripts/: DASHBOARD_README.md  apply_markers.py  benchmark_coverage_validation.py  check_test_markers.py  ci_dashboard.py  dashboard.sh  health_monitor_production.sh  install_health_monitor.sh  mark_remaining_tests.py  profile_tests.py  run_tests.sh  setup-git-hooks.sh  setup_worktree.sh  validate_coverage.py
src/: __init__.py
src/claudelearnspokemon/: __init__.py  alert_manager.py  backward_compatibility_validation.py  checkpoint_manager.py  circuit_breaker.py  claude_code_manager.py  claude_process.py  common_circuit_breaker.py  common_error_handling.py  common_logging.py  common_metrics.py  config.py  container_auto_restart.py  conversation_error_handler.py  conversation_error_handling.py  conversation_lifecycle_manager.py  conversation_state.py  docker_environment_detector.py  dsl_ast.py  emulator_pool.py  emulator_pool_refactored.py  enhanced_client.py  experiment_models.py  experiment_selector.py  health_monitor.py  input_buffer.py  integration_demo.py  integration_performance_benchmark.py  language_evolution.py  learning_propagation_interfaces.py  logging_manager.py  mcp_data_patterns.py  mcp_memory.py  memgraph_checkpoint_discovery.py  memory_graph.py  message_classifier.py  message_router.py  metrics_endpoint.py  monitoring_middleware.py  opus_strategist.py  (+37 more)
src/claudelearnspokemon/compatibility/: __init__.py  cache_strategies.py  validation.py
src/config/: __init__.py
tests/: performance_benchmark.py  test_async_input_basic.py  test_batch_input_performance.py  test_batch_input_simple.py  test_cache_strategies.py  test_checkpoint_discovery_integration.py  test_checkpoint_manager.py  test_checkpoint_manager_concurrent.py  test_checkpoint_metadata_operations.py  test_circuit_breaker.py  test_claude_code_manager.py  test_compatibility_validation.py  test_concurrent_performance_benchmark.py  test_connection_pooling_performance_fix.py  test_container_auto_restart.py  test_conversation_lifecycle_manager.py  test_conversation_performance_benchmark.py  test_conversation_setup_integration.py  test_core_components.py  test_coverage_validation.py  test_docker_environment_detector.py  test_emulator_pool.py  test_emulator_pool_compatibility.py  test_emulator_pool_concurrent.py  test_emulator_pool_edge_cases_rex.py  test_enhanced_client.py  test_experiment_selector.py  test_experiment_selector_ml_integration.py  test_factory_cache_integration.py  test_final_validation.py  test_health_monitor.py  test_health_monitor_integration_simple.py  test_input_buffering.py  test_integration_auto_restart.py  test_integration_complete.py  test_integration_message_routing.py  test_integration_setup_validation.py  test_language_evolution_integration.py  test_language_evolution_system.py  test_learning_propagation_performance.py  (+47 more)
tests/integration/: README.md  __init__.py  conftest.py  test_compatibility_integration.py  test_docker_minimal.py  test_hybrid_environment.py  test_performance_integration.py  test_server_integration.py
