[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudelearnspokemon"
version = "0.1.0"
description = "Pokemon Red speedrun learning agent system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "docker>=6.1.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "lz4>=4.3.0",
    "structlog>=23.0.0",
    "pymgclient>=1.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anyio>=3.7.0",
    "jsonschema>=4.17.0",
    "rich>=13.0.0",
    "types-requests>=2.28.0",
    "psutil>=5.9.0",
    "typing-extensions>=4.5.0",
    "types-psutil>=5.9.0",
    "python-Levenshtein>=0.21.1",
    "responses>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0",
    "types-docker>=6.1.0",
    "testcontainers>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long - handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
check_untyped_defs = false
strict_equality = true

# Relaxed settings for tests and initial implementation
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "claudelearnspokemon.*"
disallow_untyped_defs = false
warn_return_any = false

# lz4 is required for checkpoint compression but doesn't have type stubs
# The library works fine at runtime, we just can't type-check it
[[tool.mypy.overrides]]
module = "lz4.*"
ignore_missing_imports = true

# psutil has type stubs but they might not be installed in all environments
[[tool.mypy.overrides]]
module = "psutil.*"
ignore_missing_imports = true

# Memgraph and Levenshtein libraries for checkpoint discovery
[[tool.mypy.overrides]]
module = "mgclient.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "Levenshtein.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "fast: Fast tests (<1s)",
    "medium: Medium speed tests (1-5s)",
    "slow: Slow tests (>5s)",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
skip_covered = false
